--- a/src/pages/badge/badge.html
+++ b/src/pages/badge/badge.html
@@ -1,18 +1,17 @@
-<!--
-  Generated template for the BadgePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>badge</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Badge</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-item>
+    <ion-icon name="logo-twitter" item-start></ion-icon>
+    followers
+    <ion-badge color="primary" item-end>3690</ion-badge>
+  </ion-item>
 </ion-content>
